--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 .gameboard{
     display: grid;
-    grid-template-rows: repeat(3,50px);
-    grid-template-columns: repeat(3,50px);
+    grid-template-rows: repeat(3,100x);
+    grid-template-columns: repeat(3,100px);
+;
 width: fit-content;
 border-color: blue;
 border-style: solid;
@@ -12,6 +13,7 @@ border-width: 1px;
 }
 .square{
     display: flex;
+
     align-items: center;
     justify-content: center;
   outline-style: solid;
