--- a/style.css
+++ b/style.css
@@ -1,17 +1,38 @@
+
+.display{
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  margin: 10px;
+  border: 10px;
+  border-color: aquamarine;
+  border-style: outset;
+  gap: 10px;
+}
+.display>div>span{
+  font-size: 20px;
+}
 .gameboard{
     display: grid;
     grid-template-rows: repeat(3,100x);
     grid-template-columns: repeat(3,100px);
-;
-
-
-gap: 0;
-
-    
-
+    gap: 0;
+    justify-content: center;
 }
 .gameboard div{
   aspect-ratio: 1;  
   border-color: black;
   border-style: solid;
+  
+}
+.square{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+}
+.displayBoard{
+  border-color: aquamarine;
+  border-style: dotted;
 }
