--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
-
+body{
+ display: flex;
+ flex-direction: column;
+ gap :10px;
+ margin: 10px;
+ padding: 10px;
+}
 .display{
-  display: grid;
+display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
   margin: 10px;
-  border: 10px;
+  border: 5px;
   border-color: aquamarine;
   border-style: outset;
   gap: 10px;
@@ -19,8 +25,11 @@
     grid-template-columns: repeat(3,100px);
     gap: 0;
     justify-content: center;
+    margin: 10px;
+    
 }
 .gameboard div{
+  
   aspect-ratio: 1;  
   border-color: black;
   border-style: solid;
@@ -33,6 +42,14 @@
   font-size: 2rem;
 }
 .displayBoard{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  margin: 10px;
+  border: 5px;
   border-color: aquamarine;
-  border-style: dotted;
+  border-style: outset;
+  gap: 10px;
+  height: 30px;
 }
