--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
  gap :10px;
  margin: 10px;
  padding: 10px;
- background-color: rgba(81, 126, 165, 0.438);
+ background-color: rgba(161, 187, 209, 0.377);
 }
 .display{
 display: flex;
@@ -19,7 +19,8 @@ display: flex;
   border-width: 3px;
   gap: 10px;
   width: 450px;
-  background-color: rgba(147, 176, 201, 0.308);
+  background-color: rgba(150, 185, 216, 0.295);
+  border-radius: 10px;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-size: larger;
   
@@ -44,7 +45,7 @@ font-size: larger;
   aspect-ratio: 1;  
  font-family: 'Alegreya';
   border-style: outset;
-  
+  border-radius: 10px;
 }
 .square{
   display: flex;
@@ -57,7 +58,7 @@ font-size: larger;
   justify-content: center;
   align-self: center;
   align-items: center;
-
+border-radius: 6px;
   padding: 10px;
   margin: 10px;
   border: 5px;
@@ -67,7 +68,7 @@ font-size: larger;
   border-width: 1px;
   height: 50px;
   width: 250px;
-  background-color: rgba(137, 155, 172, 0.034);;
+  background-color:rgba(126, 167, 202, 0.13);
   font-size: 20px;
   
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -76,7 +77,7 @@ font-size: larger;
 }
 #restartButton{
   align-self: center;
-  background-color: rgba(132, 156, 177, 0.438);
+  background-color: rgba(200, 209, 216, 0.438);
   height: 2em;
   width: 10rem;
   border-radius: 1px;
@@ -84,11 +85,11 @@ font-size: larger;
   border-width: 2px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 25px;
-  border-color:rgb(204, 207, 209);
+  border-color:rgb(224, 232, 238);
   color: rgb(42, 52, 61);
   font-weight: 100;
 }
 #restartButton:hover{
-  background-color: rgba(119, 133, 146, 0.486);
+  background-color: rgba(159, 195, 231, 0.486);
   border-radius: 10px;
 }
